# silicon-tmap-compatible

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  wheels.yml
ogdf-conda/src/: CMakeLists.txt
ogdf-conda/src/cmake/: compiler-specifics.cmake
ogdf-conda/src/src/ogdf/cluster/: HananiTutteCPlanarity.cpp
src/tmap/: __init__.py
src/tmap/layout_generators/: base_layout_generator.py  builtin_layout_generator.py
