[build-system]
requires = ["setuptools>=61", "wheel", "packaging", "cmake", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "tmap-viz"
description = "A Python package for visualizing large, high-dimensional data sets."
readme = "README.md"
keywords = ["visualization", "dimensionality-reduction", "machine-learning", "chemistry"]
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = ["matplotlib", "annoy ~= 1.17.0", "scipy"]
dynamic = ["version"]
authors = [
  {"name" = "Daniel Probst", "email" = "daenuprobst@gmail.com"},
]
maintainers = [
  {"name" = "Frank Harrison", "email" = "doublethefish@gmail.com"},
]

[tool.cibuildwheel]
# Skip 32-bit builds, musl build, and pypy builds
skip = ["*-manylinux_i686", "*-musllinux_*", "pp*", "*p36-*", "*p37-*", "*p38-*"]

[tool.cibuildwheel.linux]
before-build = """\
  cd ./ogdf-conda/src && \
  mkdir build && \
  cd build && \
  cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=${LIBOGDF_INSTALL_PATH} -DBUILD_SHARED_LIBS=ON -DCMAKE_POLICY_VERSION_MINIMUM=3.5 && \
  make -j4 && \
  make install && \
  cd .. && \
  rm -r build\
  """

[tool.cibuildwheel.linux.environment]
LIBOGDF_INSTALL_PATH="$(pwd)/libOGDF"

[tool.cibuildwheel.macos]
# Only build arm64 for Apple Silicon (M1+)
archs = ["arm64"]
before-all = ["brew install libomp"]
# Use Apple's system clang (not Homebrew LLVM) to avoid libc++ mismatch
before-build = """\
  mkdir -p $LIBOGDF_INSTALL_PATH && \
  cd ./ogdf-conda/src && \
  rm -rf build && \
  mkdir -p build && \
  cd build && \
  cmake .. \
        -DCMAKE_BUILD_TYPE=Release \
        -DCMAKE_INSTALL_PREFIX=$LIBOGDF_INSTALL_PATH \
        -DBUILD_SHARED_LIBS=ON \
        -DCMAKE_POLICY_VERSION_MINIMUM=3.5 \
        -DCMAKE_OSX_ARCHITECTURES=arm64 \
        -DCMAKE_OSX_DEPLOYMENT_TARGET=14.0 \
        && \
  make -j4 && \
  make install && \
  cd .. && \
  rm -rf build \
  """
repair-wheel-command = [
  "DYLD_LIBRARY_PATH=$LIBOGDF_INSTALL_PATH/lib delocate-listdeps {wheel}",
  "DYLD_LIBRARY_PATH=$LIBOGDF_INSTALL_PATH/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}",
]

[tool.cibuildwheel.macos.environment]
LIBOGDF_INSTALL_PATH="$(pwd)/libOGDF"
ARCHFLAGS="-arch arm64"
MACOSX_DEPLOYMENT_TARGET="14.0"
CFLAGS="-I$(brew --prefix libomp)/include"
CXXFLAGS="-I$(brew --prefix libomp)/include"
LDFLAGS="-L$(brew --prefix libomp)/lib -lomp"
OpenMP_ROOT="$(brew --prefix libomp)"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-build = """\
  echo %LIBOGDF_INSTALL_PATH% && \
  cd ./ogdf-conda/src && \
  mkdir build && \
  cd build && \
  cmake .. -DCMAKE_GENERATOR="Visual Studio 17 2022" -DCMAKE_INSTALL_PREFIX=%LIBOGDF_INSTALL_PATH% -DCMAKE_GENERATOR_PLATFORM=x64 -DCMAKE_BUILD_TYPE=Release -DCMAKE_POLICY_VERSION_MINIMUM=3.5 && \
  cmake --build . --config Release --target install -- /m && \
  cd .. && \
  rmdir /Q /S build\
  """

[tool.cibuildwheel.windows.environment]
# NOTE: if building locally you will have to build here or fixup the script to build
#       into the tmap-viz directory.
LIBOGDF_INSTALL_PATH="c:/libOGDF"
